public interface GatewayServicePort {
    boolean hasAccessToLegacyApi(String Role);
}